tests/baselines/reference/classConstructorAccessibility.errors.txt
==== tests/cases/compiler/classConstructorAccessibility.ts (2 errors) ====
    class C {
        public constructor(public x: number) { }
    }
    
    class D {
        private constructor(public x: number) { } // error
        ~~~~~~~
!!! classConstructorAccessibility.ts(6,5): error TS1089: 'private' modifier cannot appear on a constructor declaration.
    }
    
    var c = new C(1);
    var d = new D(1);
    
    module Generic {
        class C<T> {
            public constructor(public x: T) { }
        }
    
        class D<T> {
            private constructor(public x: T) { } // error
            ~~~~~~~
!!! classConstructorAccessibility.ts(18,9): error TS1089: 'private' modifier cannot appear on a constructor declaration.
        }
    
        var c = new C(1);
        var d = new D(1);
    }
    